--- a/Var3_Ivanov.ipynb
+++ b/Var3_Ivanov.ipynb
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "f4988449",
    "metadata": {
     "vscode": {
@@ -295,7 +295,7 @@
    "source": [
     "%%latex\n",
     "\n",
-    "Чтобы понять причину получившейся ошибки, для начала стоит разобраться с исходным сигналом. \n",
+    "Чтобы понять причину получившейся ошибки, для начала стоит разобраться с исходным сигналом. \\\n",
     "\n",
     "Несмотря на то, что требуется использование синуса, на деле мы рассматриваем радиоимпульс. \n",
     "Поскольку сигнал конечен по времени, его спектр не ограничен по частоте. \n",
@@ -309,24 +309,24 @@
     "$$\n",
     "S(\\omega)=\\pi(sinc(\\pi(f-w))+sinc(\\pi(f+w)))\n",
     "$$\n",
-    "(Это спектр радиоимпульса. В нашем случае качественных отличий не будет.) \n",
+    "(Это спектр радиоимпульса. В нашем случае качественных отличий не будет.) \\\n",
     "\n",
-    "Отсюда видно, что необходимо рассматривать ненулевую ширину спектра, как мы бы могли делать с дельта-функцией в случае бесконечности синуса.  \n",
+    "Отсюда видно, что необходимо рассматривать ненулевую ширину спектра, как мы бы могли делать с дельта-функцией в случае бесконечности синуса.  \\\n",
     "\n",
     "При дискретизации сигнала, его спектр \"размножается\" на частоты, кратные частоте дискретизации. Из-за этого высокие частоты накладываются на другие спектры.\n",
-    "На малых частотах исходного сигнала на спектры почти не приходит никаких искажений от соседних из-за убывающего характера $sinc(\\omega)$. \n",
+    "На малых частотах исходного сигнала на спектры почти не приходит никаких искажений от соседних из-за убывающего характера $sinc(\\omega)$. \\\n",
     "\n",
     "При изменении f исходного сигнала, спектр отдаляется от частот, кратных частоте дискретизации, тем самым взаимодействуя больше с соседними спектрами.\n",
     "В какой-то момент влияние соседних импульсов друг на друга начинает приводить к необратимым изменениям в сигнале. \n",
-    "По факту это свидетельствует о нарушении теоремы Котельникова. При росте f воздействие спектров друг на друга будет все сильнее, что будет увеличивать их искажения.\n",
+    "По факту это свидетельствует о нарушении теоремы Котельникова. При росте f воздействие спектров друг на друга будет все сильнее, что будет увеличивать их искажения.\\\n",
     "\n",
     "Интерполяция увеличивает расстояние между кратными частоте дискретизации частотами, тем самым и увеличивая расстояние и между соседними спектрами, а так же сжимает спектр сигналов. \n",
-    "Поскольку исходный сигнал уже приобрел некоторые изменения в своей структуре из-за выше описанных явлений, интерполяция искажает сильнее и без того искаженный сигнал.\n",
+    "Поскольку исходный сигнал уже приобрел некоторые изменения в своей структуре из-за выше описанных явлений, интерполяция искажает сильнее и без того искаженный сигнал.\\\n",
     "\n",
     "Действие децимации аналогично интерполяции, но наоборот уменьшает расстояние между спектрами и расширяет их. Из-за бесконечности спектров сигналов после интерполяции \n",
-    "(хранимый сигнал конечный), они тоже будут влиять на близлежащие спектры. Поэтому высокие частоты спектров при децимации будут плохо воздействовать на качество сигнала.\n",
+    "(хранимый сигнал конечный), они тоже будут влиять на близлежащие спектры. Поэтому высокие частоты спектров при децимации будут плохо воздействовать на качество сигнала.\\\n",
     "\n",
-    "В итоге можно сказать, что ошибка такая, поскольку при увеличении частоты сигнала влияние соседних спектров друг на друга увеличивается, а интерполяция и децимация их усиливает."
+    "В итоге можно сказать, что ошибка такая, поскольку при увеличении частоты сигнала влияние соседних спектров друг на друга увеличивается, а интерполяция и децимация их усиливает.\\"
    ]
   }
  ],
